fixes scrolling menu issue on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -310,10 +310,10 @@ header,footer {
 			border-left: 3px solid silver;
 			#menu_container {
 	  		overflow:scroll;
-	  		// overflow-x:scroll;
-	  		// overflow-y:scroll;
 	  		display: block;
 				position: relative;
+				height: 77%;
+				padding: 0 0 10px;
 	  	}
 	  	#menu_tab {
 	  		width:40px;
